upload first version

--- a/index.html
+++ b/index.html
@@ -1,11 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=~, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    
+    <section class="top-head"><!--start top section-->
+        <div class="half-width">
+            <h3>Hello I'm</h3>
+            <h1>Khandoker Shahid</h1>
+            <p>I am a puska level web developer. I'm learning web development to upgrate me as a Full stack web
+                Developer</p>
+            <a class="link-btn" target="_blank" href="">HIRE ME</a>
+        </div>
+        <div class="half-width">
+            <img src="images/peter.png" alt="">
+        </div>
+    </section><!--end top section-->
+
+    <section class="biography-area"><!--start biography section-->
+        <div class="half-width">
+            <img src="images/peter_dream.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2 class="biography-title">Biography</h2>
+            <p>I am a puska level web developer. I'm learning web development to upgrate me as a Full stack web
+                Developer</p>
+            <a class="link-btn" target="_blank" href="">Download CV</a>
+        </div>
+    </section><!--end biography section-->
+
+    <section class="last-work-area"><!--start latest work section-->
+        <h1 class="title">My Latest Work</h2>
+            <div class="all-img">
+                <div class="single-img">
+                    <img src="images/latest-work/work-1.png" alt="">
+                </div>
+                <div class="single-img">
+                    <img src="images/latest-work/work-2.jpg" alt="">
+                </div>
+                <div class="single-img">
+                    <img src="images/latest-work/work-3.jpg" alt="">
+                </div>
+            </div>
+    </section><!--end latest section-->
+    <section class="client-area"><!--start client section-->
+        <h2 class="client-title">What Client are say</h2>
+        <div class="first-part">
+            <h5>Bruce Moccy <br><span class="japsa">Founder & CEO</span></h5>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+        </div>
+        <div class="second-part">
+            <h6>Leave me a message in the</h6>
+            <h4>Programming Hero</h4>
+        </div>
+    </section><!--end client section-->
+    <footer>
+        <p>Programming Hero Initiative. &copy; 2020 All rights reserved</p>
+    </footer>
 </body>
+
 </html>
